seaqt/QtPositioning/gen_qgeocircle.h

class QGeoCircle;
class QGeoCoordinate;
class QGeoShape;
class QMetaObject;
typedef struct QGeoCircle QGeoCircle;
typedef struct QGeoCoordinate QGeoCoordinate;
typedef struct QGeoShape QGeoShape;
typedef struct QMetaObject QMetaObject;
QGeoCircle* QGeoCircle_new();
QGeoCircle* QGeoCircle_new2(QGeoCoordinate* center);
QGeoCircle* QGeoCircle_new3(QGeoCircle* other);
QGeoCircle* QGeoCircle_new4(QGeoShape* other);
QGeoCircle* QGeoCircle_new5(QGeoCoordinate* center, double radius);
void QGeoCircle_operatorAssign(QGeoCircle* self, QGeoCircle* other);
void QGeoCircle_setCenter(QGeoCircle* self, QGeoCoordinate* center);
QGeoCoordinate* QGeoCircle_center(const QGeoCircle* self);
void QGeoCircle_setRadius(QGeoCircle* self, double radius);
double QGeoCircle_radius(const QGeoCircle* self);
void QGeoCircle_translate(QGeoCircle* self, double degreesLatitude, double degreesLongitude);
QGeoCircle* QGeoCircle_translated(const QGeoCircle* self, double degreesLatitude, double degreesLongitude);
void QGeoCircle_extendCircle(QGeoCircle* self, QGeoCoordinate* coordinate);
struct seaqt_string QGeoCircle_toString(const QGeoCircle* self);
const QMetaObject* QGeoCircle_staticMetaObject();
void QGeoCircle_delete(QGeoCircle* self);